# mahjong

./: .coveragerc  .editorconfig  .flake8  .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  Kaisetsu.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  README_CN.rst  pyproject.toml  requirements-dev.txt  setup.py
.github/: CODEOWNERS
.github/wiki/: 1_version_cn.md  1_version_en.md  Chinese (简体中文).md  English.md  Home.md  _Sidebar.md  v2-Chinese.md  v2-English.md  v2-Japanese.md
.github/workflows/: lint_and_test.yml  publish_doc.yml  publish_wiki,.yml  publish_wiki.yml  pythonapp.yml
doc/: examples.py  test.py
docs/source/: conf.py  index.rst  mahjong.shanten.rst  mahjong.tile.rst  mahjong.utils.rst  modules.rst
docs/source/modules/: agari.rst  constants.rst  hand_calculating.rst  index.rst  meld.rst  shanten.rst  tile.rst  utils.rst
docs/source/modules/hand_calculating/: divider.rst  fu.rst  hand.rst  hand_config.rst  hand_response.rst  index.rst  scores.rst  yaku.rst  yaku_config.rst
docs/source/modules/hand_calculating/yaku_list/: index.rst
docs/source/modules/hand_calculating/yaku_list/yakuman/: index.rst
examples/: add_open_set_to_hand.py  agari.py  change_the_cost_of_yaku.py  examples.py  kazoe_as_a_sanbaiman.py  shanten_calculation.py  tanyao_hand_by_ron.py  tanyao_hand_by_tsumo.py
mahjong/: __init__.py  agari.py  constants.py  meld.py  shanten.py  tests_mixin.py  tile.py  utils.py  utils_for_tests.py
mahjong/hand_calculating/: __init__.py  divider.py  fu.py  hand.py  hand_config.py  hand_response.py  scores.py  yaku.py  yaku_config.py
mahjong/hand_calculating/tests/: tests_aotenjou.py  tests_fu_calculation.py  tests_hand_dividing.py  tests_hand_response_error.py  tests_scores_calculation.py  tests_yaku_calculation.py  tests_yakuman_calculation.py
mahjong/hand_calculating/yaku_list/: __init__.py  aka_dora.py  chankan.py  chanta.py  chantai.py  chiitoitsu.py  chinitsu.py  chun.py  daburu_open_riichi.py  daburu_riichi.py  dora.py  east.py  haitei.py  haku.py  hatsu.py  honitsu.py  honroto.py  houtei.py  iipeiko.py  ippatsu.py  ittsu.py  junchan.py  nagashi_mangan.py  north.py  open_riichi.py  pinfu.py  renhou.py  riichi.py  rinshan.py  round_wind_east.py  round_wind_north.py  round_wind_south.py  round_wind_west.py  ryanpeiko.py  sanankou.py  sankantsu.py  sanshoku.py  sanshoku_douko.py  seat_wind_east.py  seat_wind_north.py  (+19 more)
mahjong/hand_calculating/yaku_list/non_yakuman/: __init__.py  aka_dora.py  chankan.py  chanta.py  chiitoitsu.py  chinitsu.py  chun.py  daburu_riichi.py  dora.py  east.py  haitei.py  haku.py  hatsu.py  honitsu.py  honroto.py  houtei.py  iipeiko.py  ippatsu.py  ittsu.py  junchan.py  nagashi_mangan.py  north.py  pinfu.py  renhou.py  riichi.py  rinshan.py  ryanpeiko.py  sanankou.py  sankantsu.py  sanshoku.py  sanshoku_douko.py  shosangen.py  south.py  tanyao.py  toitoi.py  tsumo.py  west.py  yakuhai_place.py  yakuhai_round.py
mahjong/hand_calculating/yaku_list/yakuman/: __init__.py  chiihou.py  chinroto.py  chuuren_poutou.py  daburu_chuuren_poutou.py  daburu_kokushi.py  daichisei.py  daisangen.py  daisharin.py  daisuushi.py  kokushi.py  paarenchan.py  renhou_yakuman.py  ryuisou.py  sashikomi.py  shosuushi.py  suuankou.py  suuankou_tanki.py  suukantsu.py  tenhou.py  tsuisou.py
mahjong/locale/: locale_cn.py  locale_default.py  locale_en.py  locale_jp.py  text_reporter.py
mahjong/tests/: tests_agari.py  tests_shanten.py  tests_tile.py  tests_utils.py  tests_yaku.py
tests/: tests_agari.py  tests_meld.py  tests_shanten.py  tests_tiles_converter.py  tests_utils.py  utils_for_tests.py
tests/hand_calculating/: tests_aotenjou.py  tests_fu_calculation.py  tests_hand_dividing.py  tests_hand_response_error.py  tests_scores_calculation.py  tests_yaku_calculation.py  tests_yaku_classes.py  tests_yakuman_calculation.py
