[project]
name = "mahjong"
version = "1.2.1"
description = "Mahjong hands calculation"
authors = [
    { name = "Alexey Lisikhin", email = "alexey@nihisil.com" },
]
license = "MIT"
license-files = ["LICENSE.txt"]
readme = "README.md"
requires-python = ">= 3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/MahjongRepository/mahjong"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "mahjong",
    "mahjong.hand_calculating",
    "mahjong.hand_calculating.yaku_list",
    "mahjong.hand_calculating.yaku_list.yakuman",
]

[tool.setuptools.package-data]
mahjong = ["py.typed"]

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
]
lint = [
    "ruff>=0.11.6,<0.12",
]
test = [
    "pytest>=8.3.5,<9",
    "pytest-cov>=6.1.1,<7",
]

[tool.ruff]
target-version = "py39"
line-length = 120
extend-exclude = [
    "build",

    # Project related excludes
    "migrations",
]

[tool.ruff.lint]
select = ["B", "C", "E", "F", "W", "T"]
ignore = ["E203", "E266", "E501"]
exclude = [
    "mahjong/hand_calculating/yaku_list/__init__.py",
    "mahjong/hand_calculating/yaku_list/yakuman/__init__.py",
]

[tool.pytest.ini_options]
python_files = "tests_*.py"
