[project]
name = "mahjong"
version = "1.4.0"
description = "Mahjong hands calculation"
authors = [
    { name = "Alexey Lisikhin", email = "alexey@nihisil.com" },
]
maintainers = [
    { name = "Apricot S." },
]
license = "MIT"
license-files = ["LICENSE.txt"]
readme = "README.md"
requires-python = ">= 3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/MahjongRepository/mahjong"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "mahjong",
    "mahjong.hand_calculating",
    "mahjong.hand_calculating.yaku_list",
    "mahjong.hand_calculating.yaku_list.yakuman",
]

[tool.setuptools.package-data]
mahjong = ["py.typed"]

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
]
lint = [
    "ruff>=0.14.14,<0.15",
]
test = [
    "pytest>=9.0.2,<10",
    "pytest-cov>=7.0.0,<8",
]

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = [
    "build",

    # Project related excludes
    "migrations",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D", # pydocstyle

    "C901",    # complex-structure
    "ANN002",  # missing-type-args
    "ANN003",  # missing-type-kwargs
    "PLR0911", # too-many-return-statements
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR0915", # too-many-statements
    "PLR2004", # magic-value-comparison

    "FBT001", # boolean-type-hint-positional-argument
    "FBT002", # boolean-default-value-positional-argument
    "FBT003", # boolean-positional-value-in-call

    # Will be fixed later
    "COM812",
    "PLW1641",
    "RET505",
    "RET507",
    "SIM114",
    "PLR5501",
    "SIM102",
    "SIM108",
    "RET504",
    "RUF040",
    "PLW2901",
    "PERF401",
    "RUF059",
    "RUF015",
    "PGH003",
    "S101",
    "PLR1730",
    "RET503",
    "UP032",
    "ARG002",
    "A001",
    "ARG004",
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 120
ignore-overlong-task-comments = true

[tool.ruff.lint.extend-per-file-ignores]
"./doc/*" = [
    "T201",    # print
    "INP001",  # implicit-namespace-package
]
"./tests/*" = [
    "S101",    # assert
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest]
python_files = ["tests_*.py"]
addopts = ["-p", "no:warnings", "--no-header", "--tb=short", "-qq", "--cov", "--cov-report=term:skip-covered"]

[tool.coverage.run]
source = ["mahjong"]
omit = ["**/tests/*", "**/test_*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 100
